test/parsing/errors/reserved-bools.compopts
--detailed-errors # reserved-bools-detailed.good
--no-detailed-errors # reserved-bools-brief.good
